--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=90
-MONGODB_CNN2 = 'mongodb+srv://admin:SA51smKt65cxkb6Q@cluster0.uc361.mongodb.net/usuarios?retryWrites=true&w=majority'
+MONGODB_CNN2 = 'mongodb+srv://admin:SA51smKt65cxkb6Q@cluster0.uc361.mongodb.net/samuel_contactos?retryWrites=true&w=majority'
 MONGODB_CNN3 = 'mongodb+srv://admin:wPdUFh0u2GbMnbhC@cluster0.nj2d5.mongodb.net/tienda?retryWrites=true&w=majority'
 MONGODB_CNN = 'mongodb+srv://admin:wPdUFh0u2GbMnbhC@cluster0.nj2d5.mongodb.net/samuel_contactos?retryWrites=true&w=majority'
+SECRETORPRIVATEKEY=Enunlugardelamancha2022
+GOOGLE_CLIENT_ID = '557402101597-k8gq4655q54t35ki5vr52n9ibgd3p1uh.apps.googleusercontent.com'
+GOOGLE_SECRET_ID = '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'
